--- a/.gitignore
+++ b/.gitignore
@@ -1,35 +1,15 @@
-# Learn more https://docs.github.com/en/get-started/getting-started-with-git/ignoring-files
+# Godot 4+ specific ignores
+.godot/
 
-# dependencies
-node_modules/
+# Godot-specific ignores
+.import/
+export.cfg
+export_presets.cfg
 
-# Expo
-.expo/
-dist/
-web-build/
+# Imported translations (automatically generated from CSV files)
+*.translation
 
-# Native
-*.orig.*
-*.jks
-*.p8
-*.p12
-*.key
-*.mobileprovision
-
-# Metro
-.metro-health-check*
-
-# debug
-npm-debug.*
-yarn-debug.*
-yarn-error.*
-
-# macOS
-.DS_Store
-*.pem
-
-# local env files
-.env*.local
-
-# typescript
-*.tsbuildinfo
+# Mono-specific ignores
+.mono/
+data_*/
+mono_crash.*.json
